src-ken&y/objects/Supplier_Invoice_Line_Custom_Views__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting is deprecated.</description>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>DEPRECATED</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>DEPRECATED</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DEPRECATED</label>
</CustomObject>